actualizacion del html, boton sobre mi

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
         <ul>
           <li><a href="index.html"> Inicio</a></li>
-          <li><a href="about.html">Acerca de mí</a></li>
+          <li><a href="#acercaDeMi">Acerca de mí</a></li>
           <li><a href="contact.html">Contacto</a></li>
           <li><a href="proyectos.html">proyectos</a></li>
         </ul>
@@ -83,7 +83,7 @@
   </section>
 
  
-  <aside>
+  <aside id="acercaDeMi">
     <h3>Acerca de mí</h3>
     <p>¡Hola! 👋 Soy samuel colmenares, un apasionado desarrollador web en formación. Actualmente me especializo en frontend,
        con tecnologías como HTML, CSS y JavaScript. Mi objetivo es conseguir un trabajo remoto donde pueda seguir creciendo
